--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -1,3 +1,8 @@
+// colors
+$color-primary-dark: #ff7730;
+$color-primary-light: #ffb900;
+$color-text: white; 
+
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
