--- a/sass/components/_select_input.scss
+++ b/sass/components/_select_input.scss
@@ -1,20 +1,13 @@
-select {
-    outline: 0;
-    border: 1px solid #ff7730;
-}
-
 .select-currency {
     width: 240px;
     height: 60px;
     width: 100%;
-    // border-radius: 10px;
     padding-left: 10px;
     font-weight: 600;
-    color: #ff7730;
-    border: 1px solid #ff7730;
+    color: $color-primary-dark;
+    border: 1px solid $color-primary-dark;
     text-align: center;
 }
-
 
 #select {
     position: relative;
@@ -24,16 +17,14 @@ select {
 }
 
 .text {
-    color: white;
+    color: $color-text;
     text-transform: uppercase;
     font-size: 14px;
     margin-bottom: 10px;
 
-    // margin-left: 100px;
     @include respond(mobile) {
         font-size: 10px;
         margin-top: 5px;
-
     }
 }
 
@@ -74,7 +65,7 @@ select {
 }
 
 .from-currency-text-input {
-    color: white;
+    color: $color-text;
     font-size: 24px;
 
     @include respond(tab-port) {
@@ -90,7 +81,7 @@ select {
     display: inline;
     margin-left: 10px;
     margin-right: 20px;
-    color: white;
+    color: $color-text;
     font-size: 24px;
 
     @include respond(tab-port) {
@@ -106,7 +97,7 @@ select {
 }
 
 #to-currency-value {
-    color: white;
+    color: $color-text;
     font-size: 12rem;
 
     @include respond(tab-land) {
@@ -124,7 +115,7 @@ select {
 
 .to-currency-text {
     display: inline-block;
-    color: white;
+    color: $color-text;
     font-size: 24px;
     text-transform: uppercase;
 
@@ -138,7 +129,7 @@ select {
 }
 
 .equal {
-    color: white;
+    color: $color-text;
     font-size: 24px;
 
     @include respond(tab-port) {
