--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,21 +18,16 @@
 
     border-radius: 5px;
     background-image: linear-gradient(to right bottom,
-        rgba(#ff7730, 0.8), rgba(#ffb900, 0.8)),
+        rgba($color-primary-dark, 0.8), rgba($color-primary-light, 0.8)),
     url(../img/bc.jpg);
-    // background-image: linear-gradient(to right bottom,
-    //     rgba(#08102b, 0.8), rgba(#487eb5, 0.8)),
-    // url(../img/images.jpg);
     background-size: cover;
     background-blend-mode: color;
-
-    // position: relative;
 }
 
 .heading {
     left: 50%;
     transform: translateX(-50%);
-    color: white;
+    color: $color-text;
     position: absolute;
     margin-top: 50px;
     font-size: 12px;
@@ -60,22 +55,20 @@
         margin-top: 10px;
     }
 
-
 }
 
 .section-footer {
     height: 30px;
     margin: 10px 40px 10px 40px;
 
-    @include respond(tab-port){
+    @include respond(tab-port) {
         margin: 10px 20px 10px 20px;
     }
+
     @include respond(mobile) {
         margin: 10px 20px 10px 20px;
     }
 
     border-radius: 5px;
-    background-image: linear-gradient(to right bottom, #ff7730, #ffb900);
+    background-image: linear-gradient(to right bottom, $color-primary-dark, $color-primary-light);
 }
-
-//  rgba(8, 43, 43 , 0.8), rgba(38, 83, 83 , 0.8)), url(../img/images.jpg);
